--- a/needcheck/one.css
+++ b/needcheck/one.css
@@ -13,3 +13,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     font: inherit;
     vertical-align: baseline;
 }
+
+video {
+    max-width: 100%;
+    height: auto;
+}
